<resources>
    <string name="app_name">Guia de Política e Cidadania</string>
    <string name="guia_item">GUIA DE POLÍTICA E CIDADANIA</string>
    <string name="sobre_item">SOBRE O GUIA</string>
    <string name="sispol_title">Sistema Político Brasileiro</string>
    <string name="trespo_title">Os Três Poderes</string>
    <string name="repre_title">Funções dos Representantes</string>
    <string name="partidos_title">Partidos Políticos</string>
    <string name="sisele_title">Sistema Eleitoral e Eleições</string>
    <string name="culpol_title">Cultura Política</string>
    <string name="cidadania_title">Cidadania, Direitos e Deveres</string>
    <string name="dirtra_title">Direitos e Deveres Trabalhistas</string>
    <string name="imposto_title">Impostos</string>
    <string name="sispol_subitem1">O que é Monarquia?</string>
    <string name="sispol_subitem2">O que é República?</string>
    <string name="sispol_subitem3">O que é Parlamentarismo?</string>
    <string name="sispol_subitem4">O que é Presidencialismo?</string>
    <string name="sispol_subitem5">O que é Estado Unitário?</string>
    <string name="sispol_subitem6">O que é Estado Federativo?</string>
    <string name="sispol_subitem7">O que é Participação Política?</string>
    <string name="sispol_subitem8">O que são direitos políticos?</string>
    <string name="sispol_subitem9">O que é Plebiscito?</string>
    <string name="sispol_subitem10">O que é Referendo?</string>
    <string name="sispol_subitem11">O que é Iniciativa Popular?</string>
    <string name="sispol_subitem12">O que é Audiência Pública?</string>
    <string name="sispol_subitem13">O que é uma Democracia Representativa?</string>
    <string name="trespo_subitem1">O que faz o poder executivo?</string>
    <string name="trespo_subitem2">O que faz o poder legislativo?</string>
    <string name="trespo_subitem3">O que faz o poder judiciário?</string>
    <string name="trespo_subitem4">O que são Instituições de Controle?</string>
    <string name="repre_subitem1">O que faz o Presidente?</string>
    <string name="repre_subitem2">O que fazem os Governadores?</string>
    <string name="repre_subitem3">O que fazem os Prefeitos?</string>
    <string name="repre_subitem4">O que fazem os Senadores?</string>
    <string name="repre_subitem5">O que fazem os Vereadores?</string>
    <string name="partido_subitem1">O que são os partidos políticos?</string>
    <string name="partido_subitem2">O que é sistema partidário?</string>
    <string name="partido_subitem3">Por que temos tantos partidos políticos no Brasil?</string>
    <string name="partido_subitem4">Quais são os partidos políticos existentes no Brasil?</string>
    <string name="partido_subitem5">O que são coligações partidárias?</string>
    <string name="partido_subitem6">Como os(as) candidatos(as) são escolhido(as)s dentro dos partidos no Brasil?</string>
    <string name="partido_subitem7">O que é candidatura avulsa?</string>
    <string name="partido_subitem8">De onde vêm os recursos dos partidos políticos?</string>
    <string name="sisele_subitem1">O que é o sistema eleitoral?</string>
    <string name="sisele_subitem2">Quais as regras do sistema eleitoral majoritário no Brasil?</string>
    <string name="sisele_subitem3">Quais as regras do sistema eleitoral proporcional no Brasil?</string>
    <string name="sisele_subitem4">O que é voto branco?</string>
    <string name="sisele_subitem5">O que é voto nulo?</string>
    <string name="sisele_subitem6">O que são votos válidos?</string>
    <string name="sisele_subitem7">O que é voto de legenda?</string>
    <string name="sisele_subitem8">Nas eleições para o Legislativo, se eu votar em um(a) candidato(a) pode ser que o voto nele(a) ajude a eleger outro(a) candidato(a)?</string>
    <string name="sisele_subitem9">Quais são as regras para financiamento de campanha?</string>
    <string name="sisele_subitem10">O que eu preciso para ser candidato(a)?</string>
    <string name="culpo_subitem1">O que é tolerância?</string>
    <string name="culpo_subitem2">O que é associativismo?</string>
    <string name="culpo_subitem3">O que é personalismo?</string>
    <string name="culpo_subitem4">O que é lei?</string>
    <string name="culpo_subitem5">O que é bem público?</string>
    <string name="cidadania_subitem1">O que é cidadania?</string>
    <string name="cidadania_subitem2">O que significa a expressão "direitos e deveres"?</string>
    <string name="cidadania_subitem3">O que são direitos civis?</string>
    <string name="cidadania_subitem4">O que é direito de associação?</string>
    <string name="cidadania_subitem5">O que é a Declaração Universal dos Direitos Humanos?</string>
    <string name="cidadania_subitem6">O que são direitos sociais?</string>
    <string name="cidadania_subitem7">O que é direito à saúde?</string>
    <string name="cidadania_subitem8">O que é direito à educação?</string>
    <string name="cidadania_subitem9">O que é direito ao esporte?</string>
    <string name="cidadania_subitem10">O que é direito ao lazer?</string>
    <string name="cidadania_subitem11">O que é direito à alimentação?</string>
    <string name="cidadania_subitem12">O que é direito à habitação?</string>
    <string name="cidadania_subitem13">O que é direito à segurança?</string>
    <string name="cidadania_subitem14">O que são os direitos das minorias?</string>
    <string name="cidadania_subitem15">O que é gênero?</string>
    <string name="cidadania_subitem16">O que significa igualdade de gênero?</string>
    <string name="cidadania_subitem17">O que é raça?</string>
    <string name="cidadania_subitem18">O que é etnia?</string>
    <string name="cidadania_subitem19">O que significa igualdade racial e étnica?</string>
    <string name="dirtra_subitem1">O que é sindicato?</string>
    <string name="dirtra_subitem2">É necessário ser filiado(a) a um sindicato para que ele defenda os direitos do(a) trabalhador(a)?</string>
    <string name="dirtra_subitem3">O que são horas-extras?</string>
    <string name="dirtra_subitem4">Quais são as condições difíceis e perigosas de trabalho?</string>
    <string name="dirtra_subitem5">O que é FGTS?</string>
    <string name="imposto_subitem1">O que é Imposto?</string>
    <string name="imposto_subitem2">O que é IRRF?</string>
    <string name="imposto_subitem3">O que é IPTU?</string>
    <string name="imposto_subitem4">O que é ITR?</string>
    <string name="imposto_subitem5">O que é ISS?</string>
    <string name="imposto_subitem6">O que é IPVA?</string>
    <string name="imposto_subitem7">O que é COFINS?</string>
    <string name="imposto_subitem8">O que é ICMS?</string>
    <string name="imposto_subitem9">O que é IRPJ?</string>
    <string name="imposto_subitem10">O que é sonegação de impostos?</string>
    <string name="welcome_string">Olá! Seja bem-vindo(a) ao Guia de Política de Cidadania. Este é um projeto de parceria entre o Instituto Federal de São Paulo - Câmpus Araraquara e o Laboratório de Política e Governo da UNESP/FCLAr.</string>
    <string name="deslize_string">Deslize o dedo para a direita para acessar o menu.</string>
    <string name="pesquisa">Pesquisar</string>
    <string name="saibamais_item">Saiba Mais</string>
    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Fechar menu</string>
    <string name="title_activity_sobre">Sobre o Guia</string>
</resources>