<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/sispol_title">
        <menu>
            <item
                android:checkable="true"
                android:id="@+id/nav_sispol1"
                android:title="@string/sispol_subitem1" />
            <item
                android:checkable="true"
                android:id="@+id/nav_sispol2"
                android:title="@string/sispol_subitem2" />
            <item
                android:checkable="true"
                android:id="@+id/nav_sispol3"
                android:title="@string/sispol_subitem3" />
            <item
                android:checkable="true"
                android:id="@+id/nav_sispol4"
                android:title="@string/sispol_subitem4" />
            <item
                android:checkable="true"
                android:id="@+id/nav_sispol5"
                android:title="@string/sispol_subitem5" />
            <item
                android:checkable="true"
                android:id="@+id/nav_sispol6"
                android:title="@string/sispol_subitem6" />
            <item
                android:checkable="true"
                android:id="@+id/nav_sispol7"
                android:title="@string/sispol_subitem7" />
            <item
                android:checkable="true"
                android:id="@+id/nav_sispol8"
                android:title="@string/sispol_subitem8" />
            <item
                android:checkable="true"
                android:id="@+id/nav_sispol9"
                android:title="@string/sispol_subitem9" />
            <item
                android:checkable="true"
                android:id="@+id/nav_sispol10"
                android:title="@string/sispol_subitem10" />
            <item
                android:checkable="true"
                android:id="@+id/nav_sispol11"
                android:title="@string/sispol_subitem11" />
            <item
                android:checkable="true"
                android:id="@+id/nav_sispol12"
                android:title="@string/sispol_subitem12" />
            <item
                android:checkable="true"
                android:id="@+id/nav_sispol13"
                android:title="@string/sispol_subitem13" />
        </menu>
    </item>

    <item android:title="@string/trespo_title">
        <menu>
            <item
                android:checkable="true"
                android:id="@+id/nav_trespo1"
                android:title="@string/trespo_subitem1"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_trespo2"
                android:title="@string/trespo_subitem2"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_trespo3"
                android:title="@string/trespo_subitem3"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_trespo4"
                android:title="@string/trespo_subitem4"/>
        </menu>
    </item>
    <item android:title="@string/repre_title">
        <menu>
            <item
                android:checkable="true"
                android:id="@+id/nav_repre1"
                android:title="@string/repre_subitem1"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_repre2"
                android:title="@string/repre_subitem2"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_repre3"
                android:title="@string/repre_subitem3"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_repre4"
                android:title="@string/repre_subitem4"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_repre5"
                android:title="@string/repre_subitem5"/>
        </menu>
    </item>
    <item android:title="@string/partidos_title">
        <menu>
            <item
                android:checkable="true"
                android:id="@+id/nav_partidos1"
                android:title="@string/partido_subitem1"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_partidos2"
                android:title="@string/partido_subitem2"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_partidos3"
                android:title="@string/partido_subitem3"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_partidos4"
                android:title="@string/partido_subitem4"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_partidos5"
                android:title="@string/partido_subitem5"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_partidos6"
                android:title="@string/partido_subitem6"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_partidos7"
                android:title="@string/partido_subitem7"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_partidos8"
                android:title="@string/partido_subitem8"/>
        </menu>
    </item>
    <item android:title="@string/sisele_title">
        <menu>
            <item
                android:checkable="true"
                android:id="@+id/nav_sisele1"
                android:title="@string/sisele_subitem1"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_sisele2"
                android:title="@string/sisele_subitem2"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_sisele3"
                android:title="@string/sisele_subitem3"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_sisele4"
                android:title="@string/sisele_subitem4"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_sisele5"
                android:title="@string/sisele_subitem5"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_sisele6"
                android:title="@string/sisele_subitem6"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_sisele7"
                android:title="@string/sisele_subitem7"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_sisele8"
                android:title="@string/sisele_subitem8"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_sisele9"
                android:title="@string/sisele_subitem9"/>
        <item
                android:checkable="true"
                android:id="@+id/nav_sisele10"
                android:title="@string/sisele_subitem10"/>
        </menu>
    </item>
    <item android:title="@string/culpol_title">
        <menu>
            <item
                android:checkable="true"
                android:id="@+id/nav_culpol1"
                android:title="@string/culpo_subitem1"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_culpol2"
                android:title="@string/culpo_subitem2"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_culpol3"
                android:title="@string/culpo_subitem3"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_culpol4"
                android:title="@string/culpo_subitem4"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_culpol5"
                android:title="@string/culpo_subitem5"/>
        </menu>
    </item>
    <item android:title="@string/cidadania_title">
        <menu>
            <item
                android:checkable="true"
                android:id="@+id/nav_cidadania1"
                android:title="@string/cidadania_subitem1"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_cidadania2"
                android:title="@string/cidadania_subitem2"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_cidadania3"
                android:title="@string/cidadania_subitem3"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_cidadania4"
                android:title="@string/cidadania_subitem4"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_cidadania5"
                android:title="@string/cidadania_subitem5"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_cidadania6"
                android:title="@string/cidadania_subitem6"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_cidadania7"
                android:title="@string/cidadania_subitem7"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_cidadania8"
                android:title="@string/cidadania_subitem8"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_cidadania9"
                android:title="@string/cidadania_subitem9"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_cidadania10"
                android:title="@string/cidadania_subitem10"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_cidadania11"
                android:title="@string/cidadania_subitem11"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_cidadania12"
                android:title="@string/cidadania_subitem12"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_cidadania13"
                android:title="@string/cidadania_subitem13"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_cidadania14"
                android:title="@string/cidadania_subitem14"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_cidadania15"
                android:title="@string/cidadania_subitem15"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_cidadania16"
                android:title="@string/cidadania_subitem16"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_cidadania17"
                android:title="@string/cidadania_subitem17"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_cidadania18"
                android:title="@string/cidadania_subitem18"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_cidadania19"
                android:title="@string/cidadania_subitem19"/>
        </menu>
    </item>
    <item android:title="@string/dirtra_title">
        <menu>
            <item
                android:checkable="true"
                android:id="@+id/nav_dirtra1"
                android:title="@string/dirtra_subitem1"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_dirtra2"
                android:title="@string/dirtra_subitem2"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_dirtra3"
                android:title="@string/dirtra_subitem3"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_dirtra4"
                android:title="@string/dirtra_subitem4"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_dirtra5"
                android:title="@string/dirtra_subitem5"/>
        </menu>
    </item>
    <item android:title="@string/imposto_title">
        <menu>
            <item
                android:checkable="true"
                android:id="@+id/nav_imposto1"
                android:title="@string/imposto_subitem1"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_imposto2"
                android:title="@string/imposto_subitem2"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_imposto3"
                android:title="@string/imposto_subitem3"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_imposto4"
                android:title="@string/imposto_subitem4"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_imposto5"
                android:title="@string/imposto_subitem5"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_imposto6"
                android:title="@string/imposto_subitem6"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_imposto7"
                android:title="@string/imposto_subitem7"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_imposto8"
                android:title="@string/imposto_subitem8"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_imposto9"
                android:title="@string/imposto_subitem9"/>
            <item
                android:checkable="true"
                android:id="@+id/nav_imposto10"
                android:title="@string/imposto_subitem10"/>
        </menu>
    </item>

</menu>
